--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>21</java.version>
 		 <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
 
@@ -86,8 +86,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M9</version>
 				<configuration>
+				    <forkCount>1</forkCount>
+                    <reuseForks>true</reuseForks>
 					<argLine>${argLine} -Xmx2048m</argLine>
 				</configuration>
 			</plugin>
@@ -95,7 +97,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.2</version>
+				<version>0.8.10</version>
 				<executions>
 					<execution>
 						<goals>
