--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <description>Demo project for Spring Boot</description>
     <packaging>jar</packaging>
 
+    <!-- ✅ Java 21 support -->
     <properties>
         <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
@@ -74,7 +75,7 @@
             </exclusions>
         </dependency>
 
-        <!-- Mockito for JUnit Jupiter -->
+        <!-- Mockito -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
@@ -90,29 +91,27 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
-            <!-- Compiler Plugin for Java 21 -->
+            <!-- ✅ Compiler Plugin for Java 21 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <release>21</release>
+                    <source>21</source>
+                    <target>21</target>
+                    <!-- Remove release tag -->
+                    <!-- <release>21</release> -->
                 </configuration>
             </plugin>
 
-            <!-- Surefire Plugin for Testing -->
+            <!-- ✅ Surefire for Testing -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M9</version>
-                <configuration>
-                    <forkCount>1</forkCount>
-                    <reuseForks>true</reuseForks>
-                    <argLine>${argLine} -Xmx2048m</argLine>
-                </configuration>
             </plugin>
 
-            <!-- JaCoCo Plugin for Code Coverage -->
+            <!-- Jacoco for coverage -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
