--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
     <!-- ✅ Java 21 support -->
     <properties>
         <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.parameters>true</maven.compiler.parameters>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
     </properties>
 
