--- a/pom.xml
+++ b/pom.xml
@@ -97,8 +97,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <release>21</release>
                     <!-- Remove release tag -->
                     <!-- <release>21</release> -->
                 </configuration>
