--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.orgnization=valaxy18
+sonar.organization=valaxy18
 sonar.projectKey=valaxy1802-key
 sonar.projectName=tweet-trend-new
 sonar.language=java
