--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
 sonar.organization=valaxy18
 sonar.projectKey=valaxy1802-key
-sonar.projectName=tweet-trend-new
+sonar.projectName=valaxy18
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
