--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
-sonar.organization=viho-kernel
-sonar.projectKey=viho-kernel-18
-sonar.projectName=tweet-trend-new
+sonar.organization=valaxy
+sonar.projectKey=valaxy18_valaxy
+sonar.projectName=valaxy
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
