--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.verbose=true
-sonar.organization=valaxy
-sonar.projectKey=valaxy18_valaxy
-sonar.projectName=valaxy
+sonar.organization=valaxy18
+sonar.projectKey=valaxy18_twittertrend
+sonar.projectName=twittertrend
 sonar.language=java
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
